Fix Graph Flickering

--- a/expenses/static/css/style.css
+++ b/expenses/static/css/style.css
@@ -45,10 +45,12 @@ section {
 }
 
 section .expense-form,
-section .index-history {
+section #history_graph {
 	background: white;
 	width: 50%;
+	text-align: center;
 }
+
 
 ul {
 	margin: 0;
